# longtail-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs  readme.md  rustfmt.toml  wrapper.h
.github/workflows/: audit.yaml  rust.yaml
examples/: downsync-s3.rs  downsync.rs  dump-version-assets.rs  get.rs  get_with_cache.rs  ls.rs  print_version.rs
examples/common/: mod.rs
longtail-sys/: .gitignore  Cargo.toml  build.rs
longtail-sys/patches/: 0001-fix-fsblockstore-stale-cache-index.patch
longtail-sys/scripts/: get-hashes-for-upstream.sh
longtail-sys/src/: lib.rs
src/: async_apis.rs  commands.rs  error.rs  file_cache.rs  lib.rs  path_filter.rs  remotestore.rs
src/longtaillib/: block_index.rs  block_store.rs  chunker.rs  compression.rs  concurrent_chunk_write.rs  file_infos.rs  folderscanner.rs  hash.rs  job.rs  logging.rs  mod.rs  path_filter.rs  progress.rs  storage.rs  store_index.rs  stored_block.rs  utils.rs  version_diff.rs  version_index.rs
src/longtailstorelib/: blob_store.rs  fsstore.rs  memstore.rs  mod.rs  s3store.rs
src/remotestore/: mod.rs  remotestore.rs
test-data/: mkdata.ps1  mkdata.sh
tests/common/: mod.rs
