[package]
name = "longtail"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.69.4"

[dev-dependencies]
itertools = "0.13.0"
clap = { version = "4.5.7", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lazy_static = "1.5.0"

[dependencies]
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.38.0"
dyn-clone = "1.0.17"
fs4 = "0.8.4"
http = "1.1.0"
num_cpus = "1.16.0"
regex = "1.10.5"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
