[package]
name = "longtail"
version = "0.2.0"
edition = "2021"

[dev-dependencies]
itertools = "0.14.0"
clap = { version = "4.5.27", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
lazy_static = "1.5.0"
tempfile = "3.15.0"

[dependencies]
longtail-sys = { path = "longtail-sys" }
aws-config = { version = "1.5.14", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.69.0"
dyn-clone = "1.0.17"
fs4 = "0.12.0"
http = "1.2.0"
num_cpus = "1.16.0"
regex = "1.11.1"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
serde_json = "1.0.137"
libc = "0.2.169"
