[package]
name = "longtail-sys"
version = "0.1.0"
edition = "2021"
links = "longtail"

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
  "rustls-tls-webpki-roots",
] }
bindgen = "0.71"
cc = "1.2"
sha2 = "0.10.8"
zip = "2.2"
zip-extensions = "0.8"

[dependencies]

[features]
default = ["vendored"]
vendored = []
