[package]
name = "longtail-sys"
version = "0.1.0"
edition = "2021"
links = "longtail"

[build-dependencies]
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "rustls-tls",
  "rustls-tls-webpki-roots",
] }
bindgen = "0.72"
cc = "1.2"
sha2 = "0.10.9"
zip = "4.3"

[dependencies]

[features]
default = ["vendored"]
vendored = []
